[package]
name = "imagecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
structopt = "0.3.26"

[[bin]]
name = "imagecli"
path = "src/imagecli.rs"

[lib]
name = "imagix"
path = "src/imagix/mod.rs"